--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,6 +31,6 @@
     </section>
 
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="chat.js"></script>
+    <script src="chat.js" env="<%- env %>"></script>
   </body>
 </html>
