--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,6 @@
     <link rel="stylesheet" type="text/css" href="style.css" >
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.0/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="chat.js" env="<%- env %>"></script>
     <title>Chat App</title>
   </head>
 
@@ -31,5 +30,6 @@
       <input id="message" class="vertical-align" type="text" />
       <button id="send_message" class="vertical-align" type="button">Send</button>
     </section>
+    <script src="chat.js" webSocketConn="<%- webSocketConn %>"></script>
   </body>
 </html>
