--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,10 @@
       <h1>Chat</h1>
     </header>
 
+    <div>
+      Your nickname is: <b><span id="nickname"></span></b>
+    </div>
+
     <section>
       <div id="change_username">
         <input id="username" type="text" />
@@ -29,7 +33,15 @@
     <br>
 
     <div class="input-group mb-3" id="input_zone">
-      <input id="message" type="text" class="form-control" placeholder="your message" aria-label="Recipient's username" aria-describedby="basic-addon2">
+      <input 
+        id="message" 
+        type="text" 
+        class="form-control" 
+        placeholder="your message" 
+        aria-label="Recipient's username" 
+        aria-describedby="basic-addon2"
+        autofocus
+      >
       <button id="send_message" type="button" class="btn btn-success">Send</button>
     </div>
     <script src="chat.js" webSocketConn="<%- webSocketConn %>"></script>
